--- a/Sewing-API/package.json
+++ b/Sewing-API/package.json
@@ -5,9 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node app/models/seed.js"
   },
-  "author": "Timm Schoenborn",
+  "author": "Cristian Desmaras",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
